GetContents: replace inner line breaks with spaces, issue2

--- a/test/resources/example.html
+++ b/test/resources/example.html
@@ -1,7 +1,8 @@
 <html>
   <body>
     <p>This is a plain paragraph.</p>
-    <p class="p_class">This p contains inner
+    <p class="p_class">This p contains
+inner
     <span class="span_class">span </span>between.</p>
     <p>See teh image <img src="images/img1.png"></p>
   </body>
