test: restructured test data

--- a/test/resources/example.html
+++ b/test/resources/example.html
@@ -4,6 +4,6 @@
     <p class="p_class">This p contains
 inner
     <span class="span_class">span </span>between.</p>
-    <p>See teh image <img src="images/img1.png"></p>
+    <div>There's also a div.</div>
   </body>
 </html>
