--- a/test/resources/links.html
+++ b/test/resources/links.html
@@ -5,10 +5,7 @@
         <a href="target.html">link</a>
       </div>
       <div>
-        <a href="target.html#anchor">link to anchor</a>
-      </div>
-      <div>
-        <a href="missing.html">missing link</a>
+        <a href="example.html" name="example_link">Another link</a>
       </div>
     </p>
   </body>
