--- a/test/resources/one_missing.html
+++ b/test/resources/one_missing.html
@@ -1,6 +1,7 @@
 <html>
   <body>
     <p>missing image <img src="images/not_here.png"></p>
+    <p><a href="missing.html">link</a></p>
   </body>
 </html>
 
