--- a/test/resources/valid.html
+++ b/test/resources/valid.html
@@ -1,5 +1,6 @@
 <html>
   <body>
+    <p>See teh image <img src="images/img1.png"></p>
     <p class="links">
       <div>
         <a href="target.html">link</a>
@@ -7,7 +8,6 @@
       <div>
         <a href="example.html" name="example_link">Another link</a>
       </div>
-    </p>
   </body>
 </html>
 
