--- a/test/resources/many_missing.html
+++ b/test/resources/many_missing.html
@@ -2,6 +2,8 @@
   <body>
     <p>missing image <img src="images/not_here.png"></p>
     <p>another missing image <img src="images/not_here_either.png"></p>
+    <p><a href="missing.html">link</a></p>
+    <p><a href="another_hit.html">link</a></p>
   </body>
 </html>
 
