Added tests for valdiating link anchor existence

--- a/test/resources/many_missing.html
+++ b/test/resources/many_missing.html
@@ -3,7 +3,7 @@
     <p>missing image <img src="images/not_here.png"></p>
     <p>another missing image <img src="images/not_here_either.png"></p>
     <p><a href="missing.html">link</a></p>
-    <p><a href="another_hit.html">link</a></p>
+    <p><a href="target.html#missing_anchor">link</a></p>
   </body>
 </html>
 
