--- a/test/resources/valid.html
+++ b/test/resources/valid.html
@@ -6,6 +6,9 @@
         <a href="target.html">link</a>
       </div>
       <div>
+        <a href="target.html#anchor">link</a>
+      </div>
+      <div>
         <a href="example.html" name="example_link">Another link</a>
       </div>
   </body>
