support anchors pointing to id of arbitrary element

--- a/test/resources/target.html
+++ b/test/resources/target.html
@@ -1,5 +1,7 @@
 <html>
   <body>
-    <a name="anchor">anchor</a>
+    <a name="anchor">anchor in a by name</a>
+    <a id="anchor_by_id">anchor in a by id</a>
+    <div id="anchor_in_div">anchor in a div id</div>
   </body>
 </html>
