--- a/test/resources/valid.html
+++ b/test/resources/valid.html
@@ -9,6 +9,12 @@
         <a href="target.html#anchor">link</a>
       </div>
       <div>
+        <a href="target.html#anchor_by_id">link</a>
+      </div>
+      <div>
+        <a href="target.html#anchor_in_div">link</a>
+      </div>
+      <div>
         <a href="example.html" name="example_link">Another link</a>
       </div>
   </body>
